# OOP_labs

./: README.md
lab1/: CMakeLists.txt  README.md  main.cpp  solve.cpp  solve.hpp  tests.cpp
lab2/: CMakeLists.txt  Octal.cpp  Octal.hpp  main.cpp  tests.cpp
lab2/include/: Octal.hpp
lab2/src/: Octal.cpp
lab2/test/: test.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: figure.hpp  figures.hpp  point.hpp  rectangle.hpp  rhombus.hpp  trapezoid.hpp
lab3/src/: figures.cpp  point.cpp  rectangle.cpp  rhombus.cpp  trapezoid.cpp
lab3/test/: test.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: figures.hpp  point.hpp  rectangle.hpp  rhombus.hpp  trapezoid.hpp
lab4/test/: test.cpp
lab5/: CMakeLists.txt  a.out  main.cpp
lab5/allocator/: allocator.hpp
lab5/iterators/: const_iterator.hpp
lab5/list/: list.hpp
lab5/test/: test.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/include/: bear.hpp  npc.hpp  orc.hpp  squirrel.hpp  visitor.hpp
lab6/src/: bear.cpp  factory.cpp  orc.cpp  squirrel.cpp  visitor.cpp
lab6/test/: test.cpp
lab7/: CMakeLists.txt  main.cpp
lab7/include/: bear.hpp  npc.hpp  orc.hpp  squirrel.hpp
lab7/src/: bear.cpp  npc.cpp  orc.cpp  squirrel.cpp
lab7/test/: test.cpp
